--- a/01-Fundamental-Part1/final/starter/index.html
+++ b/01-Fundamental-Part1/final/starter/index.html
@@ -25,5 +25,6 @@
     <h1>JavaScript Fundamentals - Part 1</h1>
 
     <script src="./script.js"></script>
+    <script src = "./challenge1.js"></script>
 </body>
 </html>
